--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,10 +8,10 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  access_key_id: ENV["aws_access_key_id"]
-  secret_access_key: ENV["aws_secret_access_key"]
-  region: "ap-northeast-1"
-  bucket: ENV["aws_bucket"]
+  access_key_id: <%= ENV["aws_access_key_id"] %>
+  secret_access_key: <%= ENV["aws_secret_access_key"] %>
+  region: <%= ENV["aws_region"] %>
+  bucket: <%= ENV["aws_bucket"] %>
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
