--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "axios": "^0.24.0",
+    "stimulus": "^3.0.1",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
@@ -14,9 +16,9 @@
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3",
     "autoprefixer": "10.0.2",
     "postcss": "^8.2.14",
-    "tailwindcss": "^2.2.15"
+    "tailwindcss": "^2.2.15",
+    "webpack-dev-server": "^3"
   }
 }
