--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ yarn-debug.log*
 /config/credentials/production.key
 # Ignore application configuration
 /config/application.yml
+/config/credentials.yml.enc
